# FedHD

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
fedhd/: __init__.py  client.py  data.py  fl_trainer.py  ucihar.py
fedhd/scripts/: __init__.py  experiments.py  plot.py  test.py
logs/: caltech256_hd.csv  caltech_hd_niid.csv  caltech_nn_iid.csv  caltech_nn_niid.csv  caltech_test.csv  caltech_test_iid.csv  caltech_test_nn.csv  cifar100_hd.csv  cifar10_hd.csv  cifar10_test.csv  face_d10k.csv  face_d2048.csv  face_d4096.csv  face_d8192.csv  face_hd.csv  face_hd5.csv  face_nn.csv  face_nn5.csv  flowers_hd128.csv  flowers_hd64.csv  flowers_test.csv  flowers_test_hd.csv  isolet5.csv  isolet_hd.csv  isolet_nn.csv  isolet_nn5.csv  pamap.csv  pamap5.csv  pamap_d10k.csv  pamap_d8192.csv  pamap_hd.csv  pamap_hd5.csv  pamap_nn.csv  pamap_nn5.csv  ucihar5.csv  ucihar_hd.csv  ucihar_nn.csv  ucihar_nn5.csv
pl_bolts_custom/pl_bolts/: __init__.py
pl_bolts_custom/pl_bolts/models/: __init__.py
pl_bolts_custom/pl_bolts/models/self_supervised/: __init__.py  resnets.py
pl_bolts_custom/pl_bolts/models/self_supervised/simclr/: __init__.py  simclr_module.py
