[tool.poetry]
name = "fedhd"
version = "0.1.0"
description = "Federated Learning using Hyperdimensional Computing"
authors = ["Rishikanth <r3chandr@ucsd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
