[tool.poetry]
name = "fedhd"
version = "0.1.0"
description = "Federated Learning using Hyperdimensional Computing"
authors = ["Rishikanth <r3chandr@ucsd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch-hd = "^4.1.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
pytest = "*"
pre-commit = "*"
python-lsp-server = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "fedhd.scripts.test:main"
