[tool.poetry]
name = "fedhd"
version = "0.1.0"
description = "Federated Learning using Hyperdimensional Computing"
authors = ["Rishikanth <r3chandr@ucsd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch-hd = "^4.1.1"
click = "^8.1.3"
torchvision = "^0.14.1"
hvplot = "^0.8.4"
holoviews = "^1.16.2"
selenium = "^4.10.0"
lightning-bolts = "0.3.3"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
pytest = "*"
pre-commit = "*"
python-lsp-server = "*"
urllib3 = "1.26.16"
requests = "2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fedhd_test = "fedhd.scripts.test:cli"
fedhd = "fedhd.scripts.experiments:main"
